fix(grouping-calendar-week): :bug: fixed week grouping view alignment

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -79,7 +79,11 @@
   flex:1;
   display: flex;
   justify-content: flex-start;
-  align-items: stretch;;
+  align-items: stretch;
+}
+
+.rbc-grouping-children-wrapper{
+  flex: 1;
 }
 
 .rbc-grouping-column {
